# mandelbrot-visualizer-sfml

./: .gitignore  CMakeLists.txt  README.md  compile-info.txt
cpp/: Area.h  ColorPalette.cpp  ColorPalette.hpp  Mandelbrot.cpp  Mandelbrot.hpp  Matrix.cpp  Matrix.hpp  Point.h  Program.cpp  Program.hpp  Real.cpp  Real.h  Size.cpp  Size.h  StartupData.cpp  StartupData.h  Support.h  main.cpp
resources/: startupData.txt
